# mixer

./: .codacy.yml  .dockerignore  .gcloudignore  .gitignore  .golangci.yml  1  CHANGELOG.md  Dockerfile  README.md  cloudbuild.binarydatapush.yaml  cloudbuild.datapush.yaml  cloudbuild.git.yaml  cloudbuild.test.yaml  cloudbuild.yaml  embeddings_sidecar.md  go.mod  go.sum  grpc.memprof  grpc2.memprof  index.html  main.go  mixer-grpc.pb  prepare-proto.sh  requirements.txt  run_server.sh  run_test.sh  skaffold.yaml  startup.mem.out  type_relation.json  update-golden-prod.sh  update-golden.sh
base/: base.go  base_test.go
cmd/: main.go
config/: prod.yaml
cpp-client/: .gitignore  CMakeLists.txt  README.md  USAGE.md
cpp-client/examples/: main.cpp
cpp-client/include/: DataCommons.h
cpp-client/src/: DataCommons.cpp
deploy/: Dockerfile  README.md  cloudbuild.yaml  push_deploy_tool_image.sh
deployment/: README.md  README_todo.md  bigquery.txt  bigtable.txt  certificate.yaml  docker_image.txt  endpoints.yaml.tmpl  gcp.sh  generate_yaml.sh  gke.sh  ingress-ssl.yaml  mixer-grpc-esp.yaml  mixer-grpc.yaml  nginx.conf  openapi.yaml  out.pb  prod_bq_dataset.txt  prod_bt_table.txt  prod_cache_folder.txt  result.yaml  service.yaml  staging_bq_dataset.txt  staging_bt_table.txt  staging_cache_folder.txt  template_api_config.yaml  template_deployment.yaml
docs/: Makefile  README.md  architecture.md  conf.py  configurable_mixer_settings_design.md  custom_mixer.md  developer_guide.md  feature_flags.md  http_routing.md  index.html  index.rst  make.bat  recon_guide.md  swagger.yaml  (+2 more)
(+2737 files in other folders)
